Added Styling to the Header

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,4 +1,41 @@
+.header {
+  display: flex;
+  padding: 15px 20px;
+  justify-content: space-between;
+  position: sticky;
+  background-color: white;
+  z-index: 100;
+  top: 0;
+  box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
+}
+
+.header-left {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .logo {
-  max-height: 5rem;
-  max-width: 5rem;
+  max-height: 3rem;
+  max-width: 3rem;
+}
+
+.header-input {
+  display: flex;
+  align-items: center;
+  background-color: #eff2f5;
+  padding: 10px;
+  margin-left: 10px;
+  border-radius: 30px;
+}
+
+.header-input > input {
+  border: none;
+  background-color: transparent;
+  outline-width: 0;
+}
+
+.header-center {
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
