--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -39,3 +39,34 @@
   flex: 1;
   justify-content: center;
 }
+
+.header-option {
+  display: flex;
+  align-items: center;
+  padding: 0 30px;
+  cursor: pointer;
+}
+
+.header-option:hover {
+  background-color: #eff2f5;
+  border-radius: 10px;
+  align-items: center;
+  padding: 0 30px;
+  border-bottom: none;
+}
+
+.header-option--active > .MuiSvgIcon-root {
+  color: #2e81f4;
+}
+
+.header-option--active {
+  border-bottom: 4px solid #2e81f4;
+}
+
+.header-option > .MuiSvgIcon-root {
+  color: gray;
+}
+
+.header-option:hover > .MuiSvgIcon-root {
+  color: #2e81f4;
+}
