--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -70,3 +70,16 @@
 .header-option:hover > .MuiSvgIcon-root {
   color: #2e81f4;
 }
+
+.header-info {
+  display: flex;
+  align-items: center;
+}
+
+.header-info > h4 {
+  margin: 10px;
+}
+
+.header-right {
+  display: flex;
+}
